# depq

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: weekly.yml
src/: bfs.rs  consts.rs  dfs.rs  graph.rs  macros.rs  main.rs  tsort.rs
tests/: command.rs
tests/fixtures/: example.bfs.path.txt  example.bfs.txt  example.dfs.path.txt  example.dfs.tree.txt  example.dfs.txt  example.dot  example.inverted.txt  example.json  example.txt  has_loop.txt
