[package]
name = "depq"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.59"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tempfile = "3.4.0"

[dev-dependencies]
assert_cmd = "2.0.10"
